2022-04-18  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2022-04-18  Morten Welinder <terra@gnome.org>

	* Release 1.12.52

2022-04-03  Morten Welinder  <terra@gnome.org>

	* src/sheet.c (cb_max_cell_width): Be less aggressive in column
	widening.  #621.

2022-03-16  Morten Welinder  <terra@gnome.org>

	* src/sheet.c (gnm_sheet_constructed): When rescaling row height
	due to font size, also increase column width.

2022-03-06  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-write.c (xml_write_colrow_info): Fix last fix.  I
	accidentally made the run-length encoding break off too early.

2022-03-02  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-write.c (xml_write_colrow_info): Fix problem writing
	identical columns separated by pristine default columns.  Fixes
	#619.

2022-02-26  Morten Welinder  <terra@gnome.org>

	* src/expr-name.c (expr_name_set_expr): Plug leak.

2022-01-21  Morten Welinder  <terra@gnome.org>

	* src/wbc-gtk-actions.c: In vertical toolbar mode, show a combo
	instead of individual horizontal alignment entries.

2022-01-20  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2022-01-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.51

2022-01-19  Morten Welinder  <terra@gnome.org>

	* src/mstyle.c (gnm_style_linked_sheet_changed): Add missing ref.
	Fixes #597.
	(gnm_style_merge): Mark elements from overlay as set in base.

2022-01-09  Morten Welinder  <terra@gnome.org>

	* src/rendered-value.c (gnm_rendered_value_new): Work around Pango
	bug 653, see Gnumeric bug 607.  Pango is fixing the issue, but we
	need to deal with the situation.  In the long run, something based
	on pango_attr_list_change should probably be used.

2021-12-26  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-read.c (xml_cell_set_array_expr): Take position as
	argument; fix non-cell case.
	(xml_sax_cell_content): Fix crash on inter-gnumeric array formula
	paste.  [#606]
