@@ -2,6 +2,7 @@ Gnumeric 1.12.53
 
 Morten:
 	* Fix xlsx import of T.INV.
+	* Fix inter-process array paste problem.  [#634]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.52
